--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev -p 4000",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 4000",
     "lint": "next lint"
   },
   "dependencies": {
@@ -13,10 +13,12 @@
     "@types/add": "^2.0.3",
     "@types/react-js-pagination": "^3.0.7",
     "axios": "^1.6.2",
+    "flowbite": "^2.2.0",
     "immer": "^10.0.3",
     "moment-timezone": "^0.5.43",
     "next": "^14.0.3",
     "next-auth": "^4.24.5",
+    "next-themes": "^0.2.1",
     "prettier": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
