--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@prisma/client": "^5.6.0",
     "@types/add": "^2.0.3",
+    "@types/bcrypt": "^5.0.2",
     "@types/react-js-pagination": "^3.0.7",
     "axios": "^1.6.2",
+    "bcrypt": "^5.1.1",
     "flowbite": "^2.2.0",
     "immer": "^10.0.3",
     "moment-timezone": "^0.5.43",
