--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.6.0",
+    "@prisma/client": "^5.7.0",
+    "@prisma/extension-accelerate": "^0.6.2",
     "@types/add": "^2.0.3",
     "@types/bcrypt": "^5.0.2",
     "@types/react-js-pagination": "^3.0.7",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "flowbite": "^2.2.0",
+    "flowbite-react": "^0.7.0",
     "immer": "^10.0.3",
     "moment-timezone": "^0.5.43",
     "next": "^14.0.3",
@@ -31,15 +33,15 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.10.2",
-    "@types/react": "^18.2.40",
+    "@types/node": "^20.10.3",
+    "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.55.0",
     "eslint-config-next": "^14.0.3",
-    "postcss": "^8.4.31",
-    "prisma": "^5.6.0",
-    "tailwindcss": "^3.3.5",
-    "typescript": "^5.3.2"
+    "postcss": "^8.4.32",
+    "prisma": "^5.7.0",
+    "tailwindcss": "^3.3.6",
+    "typescript": "^5.3.3"
   }
 }
